HHH-15146 Run tests for hibernate-jpamodelgen-jakarta